--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </section>
             
             <section>
-                <h2><i class="fas fa-cogs"></i> Funcionamento</h2>
+                <h2><i class="fas fa-cogs"></i> Operação</h2>
                 <p>Nosso framework aproveita as capacidades do Gemini para coordenar e interpretar os resultados de diversas ferramentas de segurança, automatizando a detecção de vulnerabilidades na infraestrutura de forma eficiente.</p>
             </section>
             
